@@ -845,80 +845,6 @@
                 </spacer>
                </item>
                <item>
-                <widget class="QLabel" name="use_volume_label" >
-                 <property name="enabled" >
-                  <bool>false</bool>
-                 </property>
-                 <property name="text" >
-                  <string>Change volume just before p&amp;laying</string>
-                 </property>
-                 <property name="buddy" >
-                  <cstring>use_volume_combo</cstring>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="TristateCombo" name="use_volume_combo" >
-                 <property name="enabled" >
-                  <bool>false</bool>
-                 </property>
-                 <property name="sizePolicy" >
-                  <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <spacer>
-                 <property name="orientation" >
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" >
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-              </layout>
-             </item>
-             <item>
-              <layout class="QHBoxLayout" >
-               <property name="spacing" >
-                <number>6</number>
-               </property>
-               <property name="leftMargin" >
-                <number>0</number>
-               </property>
-               <property name="topMargin" >
-                <number>0</number>
-               </property>
-               <property name="rightMargin" >
-                <number>0</number>
-               </property>
-               <property name="bottomMargin" >
-                <number>0</number>
-               </property>
-               <item>
-                <spacer>
-                 <property name="orientation" >
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeType" >
-                  <enum>QSizePolicy::Fixed</enum>
-                 </property>
-                 <property name="sizeHint" >
-                  <size>
-                   <width>20</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item>
                 <widget class="QLabel" name="default_volume_label" >
                  <property name="enabled" >
                   <bool>false</bool>
@@ -1290,7 +1216,6 @@ For translators: don't translate this text, it will be replaced with another one
   <tabstop>volnorm_check</tabstop>
   <tabstop>global_volume_check</tabstop>
   <tabstop>change_volume_check</tabstop>
-  <tabstop>use_volume_combo</tabstop>
   <tabstop>initial_volume_slider</tabstop>
   <tabstop>audio_lang_edit</tabstop>
   <tabstop>subtitle_lang_edit</tabstop>
@@ -1408,38 +1333,6 @@ For translators: don't translate this text, it will be replaced with another one
     <hint type="destinationlabel" >
      <x>515</x>
      <y>338</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>change_volume_check</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>use_volume_label</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>124</x>
-     <y>143</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>277</x>
-     <y>176</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>change_volume_check</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>use_volume_combo</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>124</x>
-     <y>143</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>534</x>
-     <y>176</y>
     </hint>
    </hints>
   </connection>
